--- a/rps.html
+++ b/rps.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="/js/rpsEngine.js"></script>
+    <script src="./js/rpsEngine.js" defer></script>
 </head>
 <body>
+    <div class="container">
+        <button id="2">Rock</button>
+        <button id="3">Paper</button>
+        <button id="4">Scissors</button>
+    </div>
+    <div class="outcome"></div>
+    <div class="score"></div>
 </body>
 </html>
